# api_docs.json
@@ -37,6 +37,17 @@
         "consumes": [
           "application/json"
         ],
+        "parameters": [],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/task/create": {
+      "post": {
+        "summary": "/api/task/create",
+        "consumes": [
+          "application/json"
+        ],
         "parameters": [
           {
             "in": "body",
@@ -45,9 +56,50 @@
             "schema": {
               "type": "object",
               "properties": {
-                "user": {
+                "title": {
                   "type": "string",
-                  "example": "{\"userId\":\"dbe192df-34fe-4466-a2d9-99f6f312094f\",\"name\":\"Federico\",\"surname\":\"Zappa\",\"email\":\"fredez1991@gmail.com\",\"role\":\"user\",\"phone\":\"2996733585\",\"token\":\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImZyZWRlejE5OTFAZ21haWwuY29tIiwidXNlcklkIjoiZGJlMTkyZGYtMzRmZS00NDY2LWEyZDktOTlmNmYzMTIwOTRmIiwiaWF0IjoxNzI0NjczMTk1LCJleHAiOjE3MjQ2NzMxOTV9.7K7JjmDNkdxM55cYt_8fSKOI3eNPW_dI4MmLrwhhjb8\"}"
+                  "example": "asd"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "asdasd"
+                },
+                "image": {
+                  "type": "string",
+                  "example": ""
+                },
+                "user": {
+                  "type": "object",
+                  "properties": {
+                    "userId": {
+                      "type": "string",
+                      "example": "dbe192df-34fe-4466-a2d9-99f6f312094f"
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Federico"
+                    },
+                    "surname": {
+                      "type": "string",
+                      "example": "Zappa"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "fredez1991@gmail.com"
+                    },
+                    "role": {
+                      "type": "string",
+                      "example": "user"
+                    },
+                    "phone": {
+                      "type": "string",
+                      "example": "2996733585"
+                    },
+                    "token": {
+                      "type": "string",
+                      "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImZyZWRlejE5OTFAZ21haWwuY29tIiwidXNlcklkIjoiZGJlMTkyZGYtMzRmZS00NDY2LWEyZDktOTlmNmYzMTIwOTRmIiwiaWF0IjoxNzI0ODUwMTYwLCJleHAiOjE3MjU0NTQ5NjB9.hljG1pQXd45_Dn62L37-UWkeVQI9PCbeSxuypelEB2s"
+                    }
+                  }
                 }
               }
             }
@@ -58,7 +110,7 @@
             "description": "Not Found",
             "schema": {
               "type": "string",
-              "example": "<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n<meta charset=\"utf-8\">\n<title>Error</title>\n</head>\n<body>\n<pre>Cannot POST /api/auth/check-user-permissions</pre>\n</body>\n</html>\n"
+              "example": "<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n<meta charset=\"utf-8\">\n<title>Error</title>\n</head>\n<body>\n<pre>Cannot POST /api/task/create</pre>\n</body>\n</html>\n"
             }
           }
         },
